[package]
name = "dicom-dump-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dicom-object = "0.6"
serde-wasm-bindgen = "0.4.5"
dicom-dictionary-std = "0.6"
dicom-core = "0.6"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "=0.2.88"
features = ["serde", "serde_json"]

[profile.release]
opt-level = 's'
lto = 'fat'
codegen-units = 1

